--- a/app/frontend/src/app/admin/pages/change-account-page/change-account-page.component.html
+++ b/app/frontend/src/app/admin/pages/change-account-page/change-account-page.component.html
@@ -1,1 +1,48 @@
-<p>change-account-page works!</p>
+<div class="grid">
+    <div class="col-12 md:col-6 md:col-offset-3 p-5">
+        <div class="shadow-4 w-full border-round-2xl surface-50 p-5 flex flex-column">
+            <span class="font-bold text-center text-3xl">Email</span>
+            <p-inputGroup class="mt-3">
+                <p-inputGroupAddon>
+                    <i class="pi pi-at"></i>
+                </p-inputGroupAddon>
+                <input pInputText placeholder="nick@example.com" [formControl]="emailControl">
+            </p-inputGroup>
+            @if (!user) {
+                <p-button class="mt-3 mx-auto"
+                    severity="help"
+                    label="Buscar"
+                    (onClick)="searchUser()"
+                />
+            } @else {
+                <form [formGroup]="accountForm" class="flex flex-column">
+                    <p-dropdown class="mx-auto mt-3" [options]="accountTypes"
+                        placeholder="Tipo de Cuenta..."
+                        optionLabel="name"
+                        optionValue="id"
+                        formControlName="account_type_id"
+                    />
+                    <div class="flex flex-column justify-content-center align-items-center mt-3">
+                        <label for="switch" class="mx-3 mb-2">Notificar</label>
+                        <p-inputSwitch
+                            inputId="switch"
+                            formControlName="notifyme"
+                        />
+                    </div>
+                    <div class="mt-3 w-full flex justify-content-center align-items-center ">
+                        <p-button class="mx-1 md:mx-3"
+                            severity="danger"
+                            label="Cancelar"
+                            (onClick)="onCancel()"
+                        />
+                        <p-button class="mx-1 md:mx-3"
+                            severity="success"
+                            label="Cambiar"
+                            (onClick)="changeAccount()"
+                        />
+                    </div>
+                </form>
+            }
+        </div>
+    </div>
+</div>
