--- a/app/frontend/src/app/admin/pages/funds-page/funds-page.component.html
+++ b/app/frontend/src/app/admin/pages/funds-page/funds-page.component.html
@@ -1,1 +1,50 @@
-<p>funds-page works!</p>
+<div class="grid">
+    <div class="col-12 md:col-6 md:col-offset-3 p-5">
+        <div class="shadow-4 w-full border-round-2xl surface-50 p-5 flex flex-column">
+            <span class="font-bold text-center text-3xl">Numero de Cuenta</span>
+            <p-inputGroup class="mt-3">
+                <p-inputGroupAddon>
+                    <i class="pi pi-id-card"></i>
+                </p-inputGroupAddon>
+                <input pInputText maxlength="13" placeholder="XXXXXXXXXXXXX" [formControl]="accountNcontrol">
+            </p-inputGroup>
+            @if (!account) {
+                <p-button class="mt-3 mx-auto"
+                    severity="help"
+                    label="Buscar"
+                    (onClick)="searchAccount()"
+                />
+            } @else {
+                <p-inputGroup class="mt-3">
+                    <p-inputGroupAddon>
+                        <i class="pi pi-money-bill"></i>
+                    </p-inputGroupAddon>
+                    <p-inputNumber
+                        placeholder="Monto"
+                        showButtons="true"
+                        [minFractionDigits]="2"
+                        [formControl]="amountControl"
+                        min="0"
+                    />
+                </p-inputGroup>
+                <p-selectButton [options]="options" class="mx-auto mt-3"
+                    optionLabel="label"
+                    optionValue="value"
+                    [formControl]="typeControl"
+                />
+                <div class="mt-3 w-full flex justify-content-center align-items-center ">
+                    <p-button class="mx-1 md:mx-3"
+                        severity="danger"
+                        label="Cancelar"
+                        (onClick)="cancel()"
+                    />
+                    <p-button class="mx-1 md:mx-3"
+                        severity="help"
+                        label="Transferir"
+                        (onClick)="makeTransaction()"
+                    />
+                </div>
+            }
+        </div>
+    </div>
+</div>
